--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welfare - travel_trip_nature</title>
+    <title>Preferential Products - travel_trip_nature</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Preferential,products"/>
-    <meta name="description" content="Preferential products"/>
+    <meta name="keywords" content="Preferential,products,deals"/>
+    <meta name="description" content="Preferential products deals"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='./css/OverlayScrollbars.min.css'>
     <link href="./css/OpenSans.css" rel="stylesheet">
@@ -56,19 +56,18 @@
           </div>
         </div>
 
-        <div class="column is-4" style="display: none">
+        <div class="column is-4">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F0108d459ba47c3a801207534f1fe2c.jpg%401280w_1l_2o_100sh.jpg&refer=http%3A%2F%2Fimg.zcool.cn&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1637756237&t=8350baeaca156e8725abd1a220be403f" alt="Placeholder image">
+                <img src="./images/travelocity.jpg" alt="travelocity deals" data-target="travelocity">
               </figure>
             </div>
             <div class="card-content">
               <div class="content">
-                <h4>Tempor orci dapibus faber in.</h4>
-                <p>Ut venenatis tellus in metus vulputate. Amet consectetur adipiscing elit pellentesque. Sed arcu non odio euismod lacinia at quis risus. Faucibus turpis in eu mi bibendum neque egestas cmonsu songue. Phasellus vestibulum lorem
-                sed risus.</p>
-                <span class="button is-link modal-button" data-target="modal-card">Modal Card</span>
+                <h4>TRAVELOCITY DEALS</h4>
+                <p>Travelocity is a 'one-stop shop' for customers looking to purchase travel. Book all your travel, flights, hotels, vacations and cruises directly with Travelocity.</p>
+                <span class="button is-link modal-button" data-target="travelocity">CHECK IT OUT</span>
               </div>
             </div>
           </div>
@@ -251,6 +250,6 @@
       </div>
     </footer>
     <script src="./js/jquery-3.3.1.slim.min.js"></script>
-    <script src="./js/funcs.js"></script>
+    <script src="./js/funcs.js?v=1.0.0"></script>
   </body>
 </html>
