--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/flighthub.jpg" alt="Placeholder image" class="modal-button" data-target="flighthub">
+                <img src="./images/flighthub.jpg" alt="flighthub deals" class="modal-button" data-target="flighthub">
               </figure>
             </div>
             <div class="card-content">
@@ -73,18 +73,18 @@
           </div>
         </div>
 
-        <div class="column is-4 modal-button" data-target="modal-image" style="display: none">
+        <div class="column is-4 modal-button" data-target="modal-image">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://res.cloudinary.com/ameo/image/upload/v1568711475/pexels-photo-1302883_fjje0f.jpg" alt="Placeholder image">
+                <img src="./images/clear.jpg" alt="clear deals" data-target="clearme">
               </figure>
             </div>
             <div class="card-content">
               <div class="content">
-                <h4>Click anywhere on card</h4>
-                <p>Imperdiet dui accumsan sit amet nulla facilisi morbi. Fusce ut placerat orci nulla pellentesque dignissim enim. Libero id faucibus nisl tincidunt eget nullam. Commodo viverra maecenas accumsan lacus vel facilisis.</p>
-                <span class="button is-link modal-button" data-target="modal-image">Image modal</span>
+                <h4>CLEAR DEALS</h4>
+                <p>By transforming your biometrics - like your eyes and face - into a single touchless ID, you can rely on CLEAR for a faster, safer experience, every time. CLEAR keeps you moving, without contact or crowds. Find CLEAR in 65+ airports, sports venues.</p>
+                <span class="button is-link modal-button" data-target="clearme">CHECK IT OUT</span>
               </div>
             </div>
           </div>
@@ -97,7 +97,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://res.cloudinary.com/ameo/image/upload/v1568711475/pexels-photo-1302883_fjje0f.jpg" alt="Placeholder image">
+                <img src="https://res.cloudinary.com/ameo/image/upload/v1568711475/pexels-photo-1302883_fjje0f.jpg" alt="Placeholder deals">
               </figure>
             </div>
             <div class="card-content">
