--- a/index.html
+++ b/index.html
@@ -91,26 +91,26 @@
         </div>
 
       </div>
-      <div class="columns features" style="display: none">
+      <div class="columns features">
 
-        <div class="column is-4 modal-button" data-target="modal-card">
+        <div class="column is-4 modal-button" >
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://res.cloudinary.com/ameo/image/upload/v1568711475/pexels-photo-1302883_fjje0f.jpg" alt="Placeholder deals">
+                <img src="./images/rvshare.jpg" alt="Placeholder deals" data-target="rvshare">
               </figure>
             </div>
             <div class="card-content">
               <div class="content">
-                <h4>Click anywhere on card to <br>expand into modal card</h4>
-                <p>Purus semper eget duis at tellus at urna condimentum mattis. Non blandit massa enim nec. Integer enim neque volutpat ac tincidunt vitae semper quis. Accumsan tortor posuere ac ut consequat semper viverra nam.</p>
-                <span class="button is-link modal-button">Modal card</span>
+                <h4>RVSHARE DEALS</h4>
+                <p>If you’re thinking about going on a cross country road trip, camping, or renting an RV for a special event, RVshare makes the whole process simple, easy, and fun!</p>
+                <span class="button is-link modal-button" data-target="rvshare">CHECK IT OUT</span>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="column is-4">
+        <div class="column is-4" style="display: none">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
