--- a/index.html
+++ b/index.html
@@ -39,52 +39,52 @@
     <section class="container">
       <div class="columns features">
 
-        <div class="column is-4">
+        <div class="column is-4" data-target="flighthub">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/flighthub.jpg" alt="flighthub deals" class="modal-button" data-target="flighthub">
+                <img src="./images/flighthub.jpg" alt="flighthub deals" class="modal-button" >
               </figure>
             </div>
             <div class="card-content">
               <div class="content">
                 <h4>FLIGHTHUB DEALS</h4>
                 <p>FlightHub is one of the best sites to plan, book and manage your travel plans! All flight itineraries are compared instantly, giving you the cheapest flights and best ticket deals available online!</p>
-                <span class="button is-link modal-button" data-target="flighthub">BOOK NOW</span>
+                <span class="button is-link modal-button">BOOK NOW</span>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="column is-4">
+        <div class="column is-4" data-target="travelocity">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/travelocity.jpg" alt="travelocity deals" data-target="travelocity">
+                <img src="./images/travelocity.jpg" alt="travelocity deals" >
               </figure>
             </div>
             <div class="card-content">
               <div class="content">
                 <h4>TRAVELOCITY DEALS</h4>
                 <p>Travelocity is a 'one-stop shop' for customers looking to purchase travel. Book all your travel, flights, hotels, vacations and cruises directly with Travelocity.</p>
-                <span class="button is-link modal-button" data-target="travelocity">CHECK IT OUT</span>
+                <span class="button is-link modal-button">CHECKOUT</span>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="column is-4 modal-button" data-target="modal-image">
+        <div class="column is-4 modal-button" data-target="clearme">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/clear.jpg" alt="clear deals" data-target="clearme">
+                <img src="./images/clear.jpg" alt="clear deals">
               </figure>
             </div>
             <div class="card-content">
               <div class="content">
                 <h4>CLEAR DEALS</h4>
                 <p>By transforming your biometrics - like your eyes and face - into a single touchless ID, you can rely on CLEAR for a faster, safer experience, every time. CLEAR keeps you moving, without contact or crowds. Find CLEAR in 65+ airports, sports venues.</p>
-                <span class="button is-link modal-button" data-target="clearme">CHECK IT OUT</span>
+                <span class="button is-link modal-button">CHECKOUT</span>
               </div>
             </div>
           </div>
@@ -93,35 +93,52 @@
       </div>
       <div class="columns features">
 
-        <div class="column is-4 modal-button" >
+        <div class="column is-4 modal-button" data-target="rvshare">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/rvshare.jpg" alt="Placeholder deals" data-target="rvshare">
+                <img src="./images/rvshare.jpg" alt="Placeholder deals" >
               </figure>
             </div>
             <div class="card-content">
               <div class="content">
                 <h4>RVSHARE DEALS</h4>
                 <p>If you’re thinking about going on a cross country road trip, camping, or renting an RV for a special event, RVshare makes the whole process simple, easy, and fun!</p>
-                <span class="button is-link modal-button" data-target="rvshare">CHECK IT OUT</span>
+                <span class="button is-link modal-button" data-target="rvshare">CHECKOUT</span>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="column is-4" style="display: none">
+        <div class="column is-4" data-target="adrenaline">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://res.cloudinary.com/ameo/image/upload/v1568711475/pexels-photo-1302883_fjje0f.jpg" alt="butterfly image" class="modal-button" data-target="modal-image4">
+                <img src="./images/adrenaline.jpg" alt="butterfly image" class="modal-button" >
               </figure>
             </div>
-            <div class="card-content  modal-button" data-target="modal-card2">
+            <div class="card-content  modal-button">
               <div class="content">
-                <h4>Click anywhere on card to <br>expand into modal card - header image expands into bigger image</h4>
-                <p>Purus semper eget duis at tellus at urna condimentum mattis. Non blandit massa enim nec. Integer enim neque volutpat ac tincidunt vitae semper quis.</p>
-                <span class="button is-link modal-button">Modal card</span>
+                <h4>ADRENLINE DEALS</h4>
+                <p>Adrenline offers the largest range of experience activities in the country.Some of the top experiences include: Helicopter Tours, Skydiving, Hot Air Balloon Rides, Pilot Lessons, Ziplining, NASCAR Drive and Rides</p>
+                <span class="button is-link modal-button">CHECKOUT</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="column is-4" data-target="flyingblue" style="display: none">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="./images/adrenaline.jpg" alt="butterfly image" class="modal-button" >
+              </figure>
+            </div>
+            <div class="card-content  modal-button">
+              <div class="content">
+                <h4>AIR FRANCE KLM POINTS DEALS</h4>
+                <p>The Flying Blue Points program run by Points.com makes it easy to purchase or give Air France and KLM miles and points to help help you earn free fligts or upgrades faster on your favorite airlines.</p>
+                <span class="button is-link modal-button">CHECKOUT</span>
               </div>
             </div>
           </div>
@@ -240,7 +257,7 @@
       </section>
       <div class="content has-text-centered">
         <div class="control level-item">
-          <a href="https://github.com/BulmaTemplates/bulma-templates">
+          <a href="https://www.instagram.com/travel_trip_nature/">
             <div class="tags has-addons">
               <span class="tag is-dark">Bulma Templates</span>
               <span class="tag is-info">MIT license</span>
@@ -250,6 +267,6 @@
       </div>
     </footer>
     <script src="./js/jquery-3.3.1.slim.min.js"></script>
-    <script src="./js/funcs.js?v=1.0.0"></script>
+    <script src="./js/funcs.js?v=1.0.2"></script>
   </body>
 </html>
