--- a/index.html
+++ b/index.html
@@ -127,17 +127,17 @@
           </div>
         </div>
 
-        <div class="column is-4" data-target="flyingblue" style="display: none">
+        <div class="column is-4" data-target="flyingblue">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/adrenaline.jpg" alt="butterfly image" class="modal-button" >
+                <img src="./images/flyingblue.jpg" alt="butterfly image" class="modal-button" >
               </figure>
             </div>
             <div class="card-content  modal-button">
               <div class="content">
                 <h4>AIR FRANCE KLM POINTS DEALS</h4>
-                <p>The Flying Blue Points program run by Points.com makes it easy to purchase or give Air France and KLM miles and points to help help you earn free fligts or upgrades faster on your favorite airlines.</p>
+                <p>The Flying Blue Points program run by Points.com makes it easy to purchase or give Air France and KLM miles and points to help help you earn free flights or upgrades faster on your favorite airlines.</p>
                 <span class="button is-link modal-button">CHECKOUT</span>
               </div>
             </div>
