--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="./css/bulma.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/hero.css">
     <style>
-    .columns:nth-child(2)
-    {margin-top: -10rem;}
+    .columns:nth-child(2) {margin-top: -10rem;}
+    .columns:nth-child(3) {margin-top: -10rem;}
     </style>
   </head>
   <body>
@@ -104,7 +104,7 @@
               <div class="content">
                 <h4>RVSHARE DEALS</h4>
                 <p>If you’re thinking about going on a cross country road trip, camping, or renting an RV for a special event, RVshare makes the whole process simple, easy, and fun!</p>
-                <span class="button is-link modal-button" data-target="rvshare">CHECKOUT</span>
+                <span class="button is-link modal-button">CHECKOUT</span>
               </div>
             </div>
           </div>
@@ -128,6 +128,60 @@
         </div>
 
         <div class="column is-4" data-target="flyingblue">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="./images/flyingblue.jpg" alt="butterfly image" class="modal-button" >
+              </figure>
+            </div>
+            <div class="card-content  modal-button">
+              <div class="content">
+                <h4>AIR FRANCE KLM POINTS DEALS</h4>
+                <p>The Flying Blue Points program run by Points.com makes it easy to purchase or give Air France and KLM miles and points to help help you earn free flights or upgrades faster on your favorite airlines.</p>
+                <span class="button is-link modal-button">CHECKOUT</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="columns features">
+
+        <div class="column is-4 modal-button" data-target="airportlax">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="./images/airportlax.jpg" alt="Placeholder deals" >
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="content">
+                <h4>AIRPORT LAX DEALS</h4>
+                <p>Book long-term parking for airports from airport lax. Search airport parking with rates up to 70% off. AirportLAX.com has the most airport parking options.</p>
+                <span class="button is-link modal-button" >CHECKOUT</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="column is-4" data-target="aaa" style="display: none">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="./images/adrenaline.jpg" alt="butterfly image" class="modal-button" >
+              </figure>
+            </div>
+            <div class="card-content  modal-button">
+              <div class="content">
+                <h4>ADRENLINE DEALS</h4>
+                <p>Adrenline offers the largest range of experience activities in the country.Some of the top experiences include: Helicopter Tours, Skydiving, Hot Air Balloon Rides, Pilot Lessons, Ziplining, NASCAR Drive and Rides</p>
+                <span class="button is-link modal-button">CHECKOUT</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="column is-4" data-target="bbb" style="display: none">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
