--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/rvshare.jpg" alt="Placeholder deals" >
+                <img src="./images/rvshare.jpg" alt="rvshare deals" >
               </figure>
             </div>
             <div class="card-content">
@@ -114,7 +114,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/adrenaline.jpg" alt="butterfly image" class="modal-button" >
+                <img src="./images/adrenaline.jpg" alt="adrenaline deals" class="modal-button" >
               </figure>
             </div>
             <div class="card-content  modal-button">
@@ -131,7 +131,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/flyingblue.jpg" alt="butterfly image" class="modal-button" >
+                <img src="./images/flyingblue.jpg?" alt="flyingblue deals" class="modal-button" >
               </figure>
             </div>
             <div class="card-content  modal-button">
@@ -151,7 +151,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/airportlax.jpg" alt="Placeholder deals" >
+                <img src="./images/airportlax.jpg" alt="airportlax deals" >
               </figure>
             </div>
             <div class="card-content">
@@ -164,17 +164,17 @@
           </div>
         </div>
 
-        <div class="column is-4" data-target="aaa" style="display: none">
+        <div class="column is-4" data-target="airportparkingreservations">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/adrenaline.jpg" alt="butterfly image" class="modal-button" >
+                <img src="./images/airportparkingreservations.jpg" alt="airportparkingreservations" class="modal-button" >
               </figure>
             </div>
             <div class="card-content  modal-button">
               <div class="content">
-                <h4>ADRENLINE DEALS</h4>
-                <p>Adrenline offers the largest range of experience activities in the country.Some of the top experiences include: Helicopter Tours, Skydiving, Hot Air Balloon Rides, Pilot Lessons, Ziplining, NASCAR Drive and Rides</p>
+                <h4>AIRPORT PARKING RESERVATIONS DEALS</h4>
+                <p>Airport Parking Reservations allows you to compare and save on airport parking for every major airport in the US with multiple parking options & free transportation. All options included - self-drive, valet, indoor & long term.</p>
                 <span class="button is-link modal-button">CHECKOUT</span>
               </div>
             </div>
