adjust size of images.

--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Preferential,products,deals"/>
+    <meta name="keywords" content="Preferential,products,deals,airport"/>
     <meta name="description" content="Preferential products deals"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel='stylesheet' href='./css/OverlayScrollbars.min.css'>
     <link href="./css/OpenSans.css" rel="stylesheet">
     <!-- Bulma Version 0.9.0-->
     <link rel="stylesheet" href="./css/bulma.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/hero.css">
     <style>
+    .columns:nth-child(1) {margin-top: -5rem;}
     .columns:nth-child(2) {margin-top: -10rem;}
     .columns:nth-child(3) {margin-top: -10rem;}
+    .columns:nth-child(4) {margin-top: -10rem;}
     </style>
   </head>
   <body>
@@ -43,7 +44,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/flighthub.jpg" alt="flighthub deals" class="modal-button" >
+                <img src="./images/flighthub.jpg?" alt="flighthub deals" class="modal-button" >
               </figure>
             </div>
             <div class="card-content">
@@ -60,7 +61,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/travelocity.jpg" alt="travelocity deals" >
+                <img src="./images/travelocity.jpg?" alt="travelocity deals" >
               </figure>
             </div>
             <div class="card-content">
@@ -77,7 +78,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/clear.jpg" alt="clear deals">
+                <img src="./images/clear.jpg?" alt="clear deals">
               </figure>
             </div>
             <div class="card-content">
@@ -97,7 +98,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/rvshare.jpg" alt="rvshare deals" >
+                <img src="./images/rvshare.jpg?" alt="rvshare deals" >
               </figure>
             </div>
             <div class="card-content">
@@ -114,7 +115,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/adrenaline.jpg" alt="adrenaline deals" class="modal-button" >
+                <img src="./images/adrenaline.jpg?" alt="adrenaline deals" class="modal-button" >
               </figure>
             </div>
             <div class="card-content  modal-button">
@@ -151,7 +152,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/airportlax.jpg" alt="airportlax deals" >
+                <img src="./images/airportlax.jpg?" alt="airportlax deals" >
               </figure>
             </div>
             <div class="card-content">
@@ -168,7 +169,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/airportparkingreservations.jpg" alt="airportparkingreservations" class="modal-button" >
+                <img src="./images/airportparkingreservations.jpg?" alt="airportparkingreservations" class="modal-button" >
               </figure>
             </div>
             <div class="card-content  modal-button">
@@ -182,6 +183,60 @@
         </div>
 
         <div class="column is-4" data-target="airportparking">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="./images/airportparking.jpg?" alt="airportparking deals" class="modal-button" >
+              </figure>
+            </div>
+            <div class="card-content  modal-button">
+              <div class="content">
+                <h4>AIRPORTPARKING.COM DEALS</h4>
+                <p>AirportParking offers travelers the chance to compare & save on airport parking for every major airport in the US with multiple parking options & free transportation. Parking options include self-drive, valet, indoor & long term.</p>
+                <span class="button is-link modal-button">CHECKOUT</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="columns features">
+
+        <div class="column is-4 modal-button" data-target="airportrentalcars"  style="display: none">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="./images/airportparking.jpg?" alt="airportlax deals" >
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="content">
+                <h4>AIRPORTRENTALCARS DEALS</h4>
+                <p>AirportRentalCars.com is a leading site for online rental car reservations with over 25 rental car brands. They offer low prices on rental cars from Alamo, Avis, Budget, Dollar, Enterprise, Hertz, National, Thrifty, etc. for all types of rentals.</p>
+                <span class="button is-link modal-button" >CHECKOUT</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="column is-4" data-target="aaa" style="display: none">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="./images/airportparkingreservations.jpg" alt="airportparkingreservations" class="modal-button" >
+              </figure>
+            </div>
+            <div class="card-content  modal-button">
+              <div class="content">
+                <h4>AIRPORT PARKING RESERVATIONS DEALS</h4>
+                <p>Airport Parking Reservations allows you to compare and save on airport parking for every major airport in the US with multiple parking options & free transportation. All options included - self-drive, valet, indoor & long term.</p>
+                <span class="button is-link modal-button">CHECKOUT</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="column is-4" data-target="bbb" style="display: none">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
