update airport lax

--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
       </div>
       <div class="columns features">
 
-        <div class="column is-4 modal-button" data-target="airportrentalcars"  style="display: none">
+        <div class="column is-4 modal-button" data-target="airportrentalcars">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/airportparking.jpg?" alt="airportlax deals" >
+                <img src="./images/airportrentalcars.jpg?" alt="airportrentalcars deals" >
               </figure>
             </div>
             <div class="card-content">
@@ -376,6 +376,6 @@
       </div>
     </footer>
     <script src="./js/jquery-3.3.1.slim.min.js"></script>
-    <script src="./js/funcs.js?v=1.0.3"></script>
+    <script src="./js/funcs.js?v=1.0.4"></script>
   </body>
 </html>
