add alamo and alaska

--- a/index.html
+++ b/index.html
@@ -219,34 +219,34 @@
           </div>
         </div>
 
-        <div class="column is-4" data-target="aaa" style="display: none">
+        <div class="column is-4" data-target="alamo">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/airportparkingreservations.jpg" alt="airportparkingreservations" class="modal-button" >
+                <img src="./images/alamo.jpg" alt="alamo deals" class="modal-button" >
               </figure>
             </div>
             <div class="card-content  modal-button">
               <div class="content">
-                <h4>AIRPORT PARKING RESERVATIONS DEALS</h4>
-                <p>Airport Parking Reservations allows you to compare and save on airport parking for every major airport in the US with multiple parking options & free transportation. All options included - self-drive, valet, indoor & long term.</p>
+                <h4>ALAMO RENT A CAR DEALS</h4>
+                <p>Looking for a car rental deal? Join Alamo Insiders. Find discounts, coupons, and last minute specials from Alamo Rent A Car.</p>
                 <span class="button is-link modal-button">CHECKOUT</span>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="column is-4" data-target="bbb" style="display: none">
+        <div class="column is-4" data-target="alaskaairmiles">
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="./images/airportparking.jpg" alt="airportparking deals" class="modal-button" >
+                <img src="./images/alaskaairmiles.jpg" alt="alaskaairmiles deals" class="modal-button" >
               </figure>
             </div>
             <div class="card-content  modal-button">
               <div class="content">
-                <h4>AIRPORTPARKING.COM DEALS</h4>
-                <p>AirportParking offers travelers the chance to compare & save on airport parking for every major airport in the US with multiple parking options & free transportation. Parking options include self-drive, valet, indoor & long term.</p>
+                <h4>ALASKA AIR POINTS DEALS</h4>
+                <p>The Alaska Airlines Points program run by Points.com makes it easy to purchase or give Alaska Airlines Mileage Plan Miles to help help you earn free flights on Alaska Airlines.</p>
                 <span class="button is-link modal-button">CHECKOUT</span>
               </div>
             </div>
