add google tracking code

--- a/index.html
+++ b/index.html
@@ -377,5 +377,14 @@
     </footer>
     <script src="./js/jquery-3.3.1.slim.min.js"></script>
     <script src="./js/funcs.js?v=1.0.4"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H9DMD98HX1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-H9DMD98HX1');
+    </script>
   </body>
 </html>
