add code of pagination

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     .columns:nth-child(2) {margin-top: -10rem;}
     .columns:nth-child(3) {margin-top: -10rem;}
     .columns:nth-child(4) {margin-top: -10rem;}
+
     </style>
   </head>
   <body>
+
     <section class="hero is-info is-small">
       <div class="hero-body">
         <div class="container has-text-centered">
@@ -32,12 +34,14 @@
         </div>
       </div>
     </section>
+
     <div class="box cta">
       <p class="has-text-centered">
         <span class="tag is-primary">New</span> The following are some of the preferential products we have collected. If you are considering the following products, you can try to buy them. This page will continue to update some favored products, remember to come here~
       </p>
     </div>
-    <section class="container">
+
+    <section id="refreshContainer" class="container">
       <div class="columns features">
 
         <div class="column is-4" data-target="flighthub">
@@ -255,6 +259,11 @@
 
       </div>
     </section>
+
+    <div id="pullUpText" class="box cta" style="display: none">
+      <p id="pullDownText" class="has-text-centered" >loading...</p>
+    </div>
+
     <footer>
       <section class="section" style="display: none">
         <div class="container">
@@ -375,8 +384,36 @@
         </div>
       </div>
     </footer>
-    <script src="./js/jquery-3.3.1.slim.min.js"></script>
+
+    <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/funcs.js?v=1.0.4"></script>
+    <script src="./js/pullUp.js"></script>
+
+    <script>
+      let totalPage = 2;
+      let page = 2;
+      function pullUpLoad() {
+        $('#pullUpText').css("display","block");
+        if(page <= totalPage){
+          $.get(page+'.html', function(data){
+            page++;
+            $("#refreshContainer").append(data);
+            //css
+            $( ".columns" ).each(function( index ) {
+              if(index > 4){
+                $(".columns:nth-child("+index+")").css("margin-top","-10rem");
+              }
+            });
+          });
+        }
+        if(page>totalPage) {
+          $('#pullUpText').css("display","none");
+        }
+
+      }
+
+    </script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-H9DMD98HX1"></script>
     <script>
