--- a/2.html
+++ b/2.html
@@ -17,6 +17,23 @@
           </div>
         </div>
 
+        <div class="column is-4" data-target="anantara">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="./images/anantara.jpg?" alt="anantara deals" class="modal-button" >
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="content">
+                <h4>ANANTARA HOTELS, RESORTS & SPAS DEALS</h4>
+                <p>Anantara Hotels & Resorts is one of the top 20 resorts groups in Asia. All its properties are placed in spectacular locations with sophisticated room and suits including a wide range of modern amenities.</p>
+                <span class="button is-link modal-button">CHECKOUT</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
 
 
 </div>
