--- a/2.html
+++ b/2.html
@@ -34,6 +34,23 @@
           </div>
         </div>
 
+        <div class="column is-4" data-target="applevacations">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="./images/applevacations.jpg?" alt="applevacations deals" class="modal-button" >
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="content">
+                <h4>APPLE VACATIONS DEALS</h4>
+                <p>Apple Vacations is the nation's largest provider of Non-stop Exclusive Vacation Flights. The Apple Vacations robust product line includes popular vacation destinations throughout Mexico, the Caribbean, the Hawaiian Islands, Central America, and South America.</p>
+                <span class="button is-link modal-button">CHECKOUT</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
 
 
 </div>
